<action dev="NKB" type="fix" context="skins">        On krysalis skin: fixed print css, also using text instead of        logos and adding the footer, and changed link colors to blues and        red for active links.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8262 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -1,13 +1,22 @@
+
 body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 p {  background-color: #FFFFFF; margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
-a:link { color: #0F3660; }
-a:visited { color: #000000; }
-a:active { color: #000000; }
-a:hover { color: #000000; border: 0px solid #a5b6c6; background: #CFDCED; }
+.textheader { display: none;  }
+.headerlogo { padding: 0px 2px 2px 0px;  }
 
-.menu a:link { color: #000000;  }
+a:link { color: #0F3660; }
+a:visited { color: #000044; }
+a:active { color: #800000; }
+a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
+
+img { border: 0; }
+
+.menu a:link { color: #000000;  font-weight: normal;}
+.menu a:visited { color: #000000; font-weight: normal; }
+.menu a:active { color: #000000; font-weight: normal; }
+.menu a:hover { color: #000000; font-weight: normal; }
 
 .menu { background-color: #F7F7F7; 
         padding: 8px 0px 4px 0px;  
@@ -156,13 +165,24 @@ h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : nor
 .footnote { font-size : 70%;  }
 .datenote { font-size : 60%;  color: #F7F7F7;}
 
-input { font-size : 70% }
-submit { font-size : 70%  }
-button { font-size : 70%  }
-textarea { font-size : 70% }
+input { font-size : 100% }
+submit { font-size : 100%  }
+button { font-size : 100%  }
+textarea { font-size : 100% }
 
 .tab { font-size : 85%; border: 0 }
+
+.tab a:link {  font-weight: normal;}
+.tab a:visited { font-weight: normal; }
+.tab a:active { font-weight: normal; }
+.tab a:hover {  font-weight: normal; }
+
 .trail { font-size: 70%; }
+
+.trail a:link {  font-weight: normal;}
+.trail a:visited {  font-weight: normal; }
+.trail a:active {  font-weight: normal; }
+.trail a:hover {  font-weight: normal; }
 
 
 .dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
@@ -242,12 +262,18 @@ textarea { font-size : 70% }
 
 
 @media print {
+  .headerlogo { display: none;  }
+  .textheader { display: block;  font-size : 70%; }
   .menu { display: none;  }
+  .dida {  display: none;  }
   .minitoc { display: none;  }
   .search { display: none;  }
-  .footnote { display: none;  }
+  .datenote { display: none;  }
+  /*.footnote { display: none;  }*/
   .tab  { display: none;  }
   .trail  { display: none;  }
+  .logos  { display: none;  }
+
   .top-left { display: none;  }
   .top-right { display: none;  }
   .top-left-tab  { display: none;  }
@@ -256,7 +282,7 @@ textarea { font-size : 70% }
   .bottom-right  { display: none;  }
   .bottom-left-thick { display: none;  }
   .bottom-right-thick  { display: none;  }
-
+    
 }
 
 
