Added a community menu, made 'AskSam' a resources submenu, moved the search part to the right.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8282 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -21,6 +21,13 @@ image#forrestbar-logo {
 }
 
 
+#forrestbar-community {
+	list-style-image: url("images/apache.gif");
+}
+#forrestbar-community:hover {
+	list-style-image: url("images/apache.gif");
+}
+
 #forrestbar-search {
 	list-style-image: url("images/search-off.gif");
 }
