Don't explicitly set paragraph background colour. When inside tables, we want paragraphs to inherit the blue background
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8384 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -1,7 +1,7 @@
 
 body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
-p {  background-color: #FFFFFF; margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
+p {  margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
 
 .textheader { display: none;  }
 .headerlogo { padding: 0px 2px 2px 0px;  }
