Make FAQ questions bold
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8385 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -111,6 +111,7 @@ h1 { font-size : 160%; margin: 0px 0px 0px 0px; padding: 0px; }
 h2 { font-size : 140%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
 h3 { font-size : 130%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
 h4 { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; text-align: left; }
 h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 
 .content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 80%;  }
