Change vertical alignment of inline images, so that the flow of text is not broken
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8386 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -5,6 +5,8 @@ a:visited { color: #009999; }
 a:active { color: #000066; }
 a:hover { color: #000066; }
 
+img { vertical-align: top }
+
 .menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 90%;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
 .menu a:visited { color: #FFFFFF; text-decoration : none; }
