--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -11,7 +11,7 @@ a:visited { color: #000044; }
 a:active { color: #800000; }
 a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
 
-img { border: 0; }
+img { border: 0; vertical-align: top }
 
 .menu a:link { color: #000000;  font-weight: normal;}
 .menu a:visited { color: #000000; font-weight: normal; }
