Add a margin to images, and add a class='spacer' to skin images so they don't get it. Also don't display empty menus in forrest-site skin
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8387 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -6,12 +6,16 @@ p {  margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  fon
 .textheader { display: none;  }
 .headerlogo { padding: 0px 2px 2px 0px;  }
 
+.spacer { border: 0; margin: 0px; }
+.skin { border: 0;  margin: 0px;}
+.figure { border: 0; vertical-align: top ; margin-top: 10px; margin-bottom: 10px; }
+img { border: 0; vertical-align: top ; margin-top: 5px; margin-bottom: 5px; }
+
+
 a:link { color: #0F3660; }
 a:visited { color: #000044; }
 a:active { color: #800000; }
 a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
-
-img { border: 0; vertical-align: top }
 
 .menu a:link { color: #000000;  font-weight: normal;}
 .menu a:visited { color: #000000; font-weight: normal; }
