--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -5,7 +5,7 @@ a:visited { color: #009999; }
 a:active { color: #000066; }
 a:hover { color: #000066; }
 
-img { vertical-align: top }
+img { border: 0; vertical-align: top }
 
 .menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 90%;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
