Fix IE rendering
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8388 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -9,7 +9,9 @@ p {  margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  fon
 .spacer { border: 0; margin: 0px; }
 .skin { border: 0;  margin: 0px;}
 .figure { border: 0; vertical-align: top ; margin-top: 10px; margin-bottom: 10px; }
-img { border: 0; vertical-align: top ; margin-top: 5px; margin-bottom: 5px; }
+img { border: 0; margin-top: 5px; margin-bottom: 5px; }
+/* Leave out vertical align until I figure out why IE isn't picking up the .skin/.spacer styles (JT) */
+/*vertical-align: top*/
 
 
 a:link { color: #0F3660; }
