Make links inside a <th> less awful
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8505 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -28,6 +28,10 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 
 .content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 90%; }
 .content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff; font-size : 90%;}
+.content .ForrestTable th a:link { color: white; }
+.content .ForrestTable th a:visited { color: #cfdced; }
+.content .ForrestTable th a:active { color: #000066; }
+.content .ForrestTable th a:hover { color: #000066; }
 .content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
 .content .ForrestTable th { text-align: center; }
 .content .ForrestTable td { background-color: #f0f0ff; color: black; }
