--- a/src/resources/forrestbar/content/forrestbar/forrestbar.css
+++ b/src/resources/forrestbar/content/forrestbar/forrestbar.css
@@ -17,79 +17,79 @@ image.forrestbar {
 }
 
 image#forrestbar-logo {
- 	list-style-image: url("images/apache.gif");
+ 	list-style-image: url("images/apache-down.png");
 }
 
 
 #forrestbar-community {
-	list-style-image: url("images/apache.gif");
+	list-style-image: url("images/apache-down.png");
 }
 #forrestbar-community:hover {
-	list-style-image: url("images/apache.gif");
+	list-style-image: url("images/apache.png");
 }
 
 #forrestbar-search {
-	list-style-image: url("images/search-off.gif");
+	list-style-image: url("images/search-down.png");
 }
 #forrestbar-search:hover {
-	list-style-image: url("images/search.gif");
+	list-style-image: url("images/search.png");
 }
 
 #forrestbar-news {
-	list-style-image: url("images/news-off.gif");
+	list-style-image: url("images/news-down.png");
 }
 #forrestbar-news:hover {
-	list-style-image: url("images/news.gif");
+	list-style-image: url("images/news.png");
 }
 
 #forrestbar-code {
-	list-style-image: url("images/code-off.gif");
+	list-style-image: url("images/code-down.png");
 }
 #forrestbar-code:hover {
-	list-style-image: url("images/code.gif");
+	list-style-image: url("images/code.png");
 }
 
 #forrestbar-download {
-	list-style-image: url("images/download-off.gif");
+	list-style-image: url("images/download-down.png");
 }
 #forrestbar-download:hover {
-	list-style-image: url("images/download.gif");
+	list-style-image: url("images/download.png");
 }
 
 #forrestbar-tools {
-	list-style-image: url("images/tools-off.gif");
+	list-style-image: url("images/tools-down.png");
 }
 #forrestbar-tools:hover {
-	list-style-image: url("images/tools.gif");
+	list-style-image: url("images/tools.png");
 }
 
 #forrestbar-asksam {
-	list-style-image: url("images/asksam-off.png");
+	list-style-image: url("images/faq-down.png");
 }
 #forrestbar-asksam:hover {
-	list-style-image: url("images/asksam.png");
+	list-style-image: url("images/faq.png");
 }
 
 #forrestbar-gump-nightly {
-	list-style-image: url("images/gump-off.png");
+	list-style-image: url("images/gump-down.png");
 }
 #forrestbar-gump-nightly:hover {
 	list-style-image: url("images/gump.png");
 }
 
 #forrestbar-local-forrest {
-	list-style-image: url("images/local-forrest.png");
+	list-style-image: url("images/forrest-down.png");
 }
 
 #forrestbar-local-forrest:hover {
-	list-style-image: url("images/local-forrest.png");
+	list-style-image: url("images/forrest.png");
 }
 
 #forrestbar-projects {
-	list-style-image: url("images/apache.gif");
+	list-style-image: url("images/projects-down.png");
 }
 #forrestbar-projects:hover {
-	list-style-image: url("images/apache.gif");
+	list-style-image: url("images/projects.png");
 }
 
 
