--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -30,7 +30,9 @@ a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
         font-size : 70%;
 }
 
+
 .menutitle { 
+        cursor:pointer;
         padding: 0px 3px 5px 10px;  
         background-image: url('images/chapter_open.gif');
         background-repeat: no-repeat;
@@ -42,6 +44,10 @@ a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
         padding: 0px;  
         font-weight : bold; }
         
+.menu .selectedmenuitemgroup{ 
+        margin: 0px 0px 6px 8px; 
+        padding: 0px;  
+        font-weight : bold; }
         
 .menu .menuitem { 
         padding: 0px 0px 2px 10px;  
