Added initial support for changing the icon og the collapsible menu titles. Strangely substituting the css image does not work (the image disappears).
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8565 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -34,7 +34,7 @@ a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
 .menutitle { 
         cursor:pointer;
         padding: 0px 3px 5px 10px;  
-        background-image: url('images/chapter_open.gif');
+        background-image: url('images/chapter.gif');
         background-repeat: no-repeat;
         background-position: center left;
         font-weight : bold;}
