PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8647 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -16,6 +16,9 @@ img { border: 0; vertical-align: top }
 .menu ul ul li .sel { list-style-image: url('images/current.gif'); font-weight : normal; }
 .menu ul ul li  { list-style-image: url('images/page.gif'); font-weight : normal; }
 
+.menu .base-seleted {color: #000000; }
+.menu .base-not-selected { font-family: Verdana, Helvetica, sans-serif; }
+
 .tab { font-size : 85%; border: 0 }
 .tab a:link {   text-decoration : none;  }
 .tab a:visited { text-decoration : none; color: #2A4A6D }
