- Move author attribution down to the bottom, like krysalis-site does. - Better <version> handling, including parsing of CVS $Revision$ tags to   extract the version
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8677 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -38,6 +38,7 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
 .content .ForrestTable th { text-align: center; }
 .content .ForrestTable td { background-color: #f0f0ff; color: black; }
+.content .attribution { text-align: right; font-style: italic; font-size: 90% }
 
 .frame { margin: 5px 20px 5px 20px; font-size: 90%; }
 .frame .content { margin: 0px; }
