Fix layout problems. Thanks to Ramon Prades <rprades@porcelanosa.com>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8747 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -5,7 +5,7 @@ a:visited { color: #009999; }
 a:active { color: #000066; }
 a:hover { color: #000066; }
 
-img { border: 0; vertical-align: top }
+img { border: 0; }
 
 .menu { background-color: #4C6C8F; margin: 0px; padding: 3px 8px 5px 3px;  font-size : 90%;  }
 .menu a:link { color: #FFFFFF;  text-decoration : none;  }
@@ -53,13 +53,13 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .fixme .label { background-color: #C6C600; color: #ffffff; }
 
 .code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
-.codefrag {	font-family: "Courier New", Courier, monospace; }
+.codefrag { font-family: "Courier New", Courier, monospace; }
 
 .highlight { background-color: yellow; }
 
 .minitoc {margin: 5px 5px 5px 40px;}
 
-.dtdElement { width: 100%;	font-size: 90%; background-color : #ffffff; }
+.dtdElement { width: 100%;  font-size: 90%; background-color : #ffffff; }
 
 .dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
 
