<action dev="NKB" type="update" context="skins" >           Major update to inner working of the krysalis-site skin:           - removed all use of the spacer.gif image           - replaced all visual enhancement icons with css icons           - fixed CSS and html validation           - reduced final output size,           - removed all font tag usage in favor of css           - added aural (speech) style in css           - reduced usage of nested tables           - refactored main xhtml stylesheet to be more clear and maintainable           - refactored css to have a single small place where to define the skin colors.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8921 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -1,35 +1,58 @@
+/* ==================== html tags ============================ */
 
-body {  background-color: #FFFFFF; margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
+body {  margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif; }
 
-p {  margin: 10px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif;  font-size : 100%;  }
+h1     { font-size : 160%; margin: 0px 0px 0px 0px;  padding: 0px; }
+h2     { font-size : 140%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
+h3     { font-size : 130%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
+h4     { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
+h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 
+input { font-size : 100% }
+submit { font-size : 100%  }
+button { font-size : 100%  }
+textarea { font-size : 100% }
+
+p   { margin: 10px 0px 0px 0px; }
+img { border: 0; margin-top: 5px; margin-bottom: 5px; }
+table .title {  width:100%; border: 0px; }
+
+/* ==================== general class modifiers ============================ */
+
+.content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 80%;  }
+.content .ForrestTable { width: 100%; font-size : 100%;}
+.content .ForrestTable caption { text-align: left; font-weight: bold; }
+.content .ForrestTable th { text-align: center; }
+
+.dida       { font-size: 80%; }
+.pre        { white-space: pre;}
 .textheader { display: none;  }
 .headerlogo { padding: 0px 2px 2px 0px;  }
+.skin       { border: 0;  margin: 0px;}
+.figure     { border: 0; vertical-align: top ; margin-top: 10px; margin-bottom: 10px; }
+.codefrag   { font-family: "Courier New", Courier, monospace; font-size : 120%;}
+.minitoc    { list-style-image: url('images/current.gif'); font-weight : normal;}
+.search     { font-size : 70%;  }
+.datenote   { font-size : 60%; text-align: right;  height: 10px;}
+.dtdTag     { text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
+.code       { border-style: solid;  border-width: 1px;  font-size : 120%; padding: 1em 1.33em 1em 1.33em;}
+.label      { font-weight: bold; }
 
-.spacer { border: 0; margin: 0px; }
-.skin { border: 0;  margin: 0px;}
-.figure { border: 0; vertical-align: top ; margin-top: 10px; margin-bottom: 10px; }
-img { border: 0; margin-top: 5px; margin-bottom: 5px; }
-/* Leave out vertical align until I figure out why IE isn't picking up the .skin/.spacer styles (JT) */
-/*vertical-align: top*/
+/* ==================== menu ============================ */
 
+.menu a {  font-weight: normal;}
+.menu a:visited {  font-weight: normal; }
+.menu a:active {  font-weight: normal; }
+.menu a:hover {  font-weight: normal; }
 
-a:link { color: #0F3660; }
-a:visited { color: #000044; }
-a:active { color: #800000; }
-a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
-
-.menu a:link { color: #000000;  font-weight: normal;}
-.menu a:visited { color: #000000; font-weight: normal; }
-.menu a:active { color: #000000; font-weight: normal; }
-.menu a:hover { color: #000000; font-weight: normal; }
-
-.menu { background-color: #F7F7F7; 
-        padding: 8px 0px 4px 0px;  
+.menu { 
+        padding: 8px 8px 8px 8px;  
         margin: 0px; 
-        font-size : 70%;
+        font-size : 70%;        
+	border-style: solid; 
+        border-width: 1px;
 }
-
 
 .menutitle { 
         cursor:pointer;
@@ -54,89 +77,65 @@ a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
         background-image: url('images/page.gif');
         background-repeat: no-repeat;
         background-position: center left;
-        font-weight : normal; 
-}
+        font-weight : normal; }
 
 .menu .menupage {         
         padding: 4px 3px 5px 10px;  
         background-image: url('images/current.gif');
         background-repeat: no-repeat;
         background-position: top left;
-        font-style : normal;
-
-        
-}
+        font-style : normal;}
 
 .menu .menupagetitle { 
         padding: 0px 0px 0px 6px;     
         font-style : normal;
-        background-color:#CFDCED; 
-        border-color: #a5b6c6; 
         border-style: solid; 
-        border-width: 1px;
-        
-}
+        border-width: 1px;}
 
 .menu .menupageitemgroup { 
         padding: 3px 0px 4px 6px;    
         font-style : normal;
-        background-color:#ffffff; 
-        border-color: #a5b6c6; 
         border-style: solid; 
-        border-width: 1px;
-        
-}
+        border-width: 1px;}
 
 .menu .menupageitem {             
-  
         font-style : normal;
         font-weight : normal; 
         border-width: 0px;
-        font-size : 90%;
+        font-size : 90%;}
+
+.tab { font-size : 85%;
+       border: 0 ;
+       margin: 0 0 0 0;
+       padding: 0 0 0 0;
+       border-spacing: 0 0;
+       vertical-align: middle;
+       height:20px;	
 }
 
+/* ==================== tabs ============================ */
 
-.smallerfont {             
-          font-size : 100%;
-        padding: 0px 0px 0px 0px;   
-}
+.tab.separator { width:6px; }
+.tab.pre-separator { width:9px;}
 
+.tab a:link {  font-weight: normal;}
+.tab a:visited { font-weight: normal; }
+.tab a:active { font-weight: normal; }
+.tab a:hover {  font-weight: normal; }
 
-.biggerfont {             
-        font-size : 100%;
-        font-weight : bold;      
-        padding: 0px 0px 0px 0px;   
-}
+/* ==================== snail trail ============================ */
 
-.resetfont {             
-        font-size : 100%;
-        font-weight : normal; 
-          padding: 0px 0px 0px 0px;  
-}
+.trail { font-size: 70%;  }
+.trail a:link {  font-weight: normal;}
+.trail a:visited {  font-weight: normal; }
+.trail a:active {  font-weight: normal; }
+.trail a:hover {  font-weight: normal; }
 
-table .title { background-color: #FFFFFF; width:100%; border: 0px; }
-.dida { font-size: 80%; }
-
-.pre { white-space: pre;}
-
-h1 { font-size : 160%; margin: 0px 0px 0px 0px; padding: 0px; }
-h2 { font-size : 140%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
-h3 { font-size : 130%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
-h4 { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
-h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; text-align: left; }
-h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
-
-.content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 80%;  }
-.content .ForrestTable { width: 100%; background-color: #7099C5; color: #ffffff; font-size : 100%;}
-.content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
-.content .ForrestTable th { text-align: center; }
-.content .ForrestTable td { background-color: #f0f0ff; color: black; }
-
+/* ==================== special forrest items ============================ */
 
 .note, .warning, .fixme {
 	border-top: 3px solid #900;
 	border-bottom: 3px solid #900;
-	background-image: url(images/icon_error_lrg.gif);
 	background-repeat: no-repeat;
 	background-position: 0 1.33em;
 	margin: 1.33em 0;
@@ -144,64 +143,33 @@ h5 { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : nor
 	min-height: 32px;
 }
 
+.fixme   { background-image: url(images/icon_warning_lrg.gif);}
+.note    { background-image: url(images/icon_info_lrg.gif);   }
+.warning { background-image: url(images/icon_error_lrg.gif);  }
 
-.fixme {
-	background-image: url(images/icon_warning_lrg.gif);
-	border-color: #c60;
-}
+/* ==================== visual class modifiers ============================ */
 
-.note {
-	background-image: url(images/icon_info_lrg.gif);
-	border-color: #069;
-}
+.leftpagemargin { width: 8px ; }
+.spacer         { height:1px;  }  
+.smallerfont {             
+          font-size : 100%;
+        padding: 0px 0px 0px 0px;  }
 
-.label{
-	font-weight: bold;
-}
+.biggerfont {             
+        font-size : 100%;
+        font-weight : bold;      
+        padding: 0px 0px 0px 0px; }
 
-
-.code { background-color: #F7F7F7;
-        border-color: #CFDCED;
-        border-style: solid; 
-        border-width: 1px; 
-        font-size : 120%;
-        padding: 1em 1.33em 1em 1.33em;
-}
-
-.codefrag {	font-family: "Courier New", Courier, monospace; font-size : 120%;}
-
-.highlight { background-color: yellow; }
-
-.minitoc { list-style-image: url('images/current.gif'); font-weight : normal;}
-
-.search { font-size : 70%;  }
-.footnote { font-size : 70%;  }
-.datenote { font-size : 60%;  color: #F7F7F7;}
-
-input { font-size : 100% }
-submit { font-size : 100%  }
-button { font-size : 100%  }
-textarea { font-size : 100% }
-
-.tab { font-size : 85%; border: 0 }
-
-.tab a:link {  font-weight: normal;}
-.tab a:visited { font-weight: normal; }
-.tab a:active { font-weight: normal; }
-.tab a:hover {  font-weight: normal; }
-
-.trail { font-size: 70%; }
-
-.trail a:link {  font-weight: normal;}
-.trail a:visited {  font-weight: normal; }
-.trail a:active {  font-weight: normal; }
-.trail a:hover {  font-weight: normal; }
-
-
-.dtdTag {    color: #990000; text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
-
+.resetfont {             
+        font-size : 100%;
+        font-weight : normal; 
+          padding: 0px 0px 0px 0px;  }
+ 
+.footer  { border:0;
+           width: 100%;
+           font-size : 70%;  }
+	   
 .top-left {
-	background-color: #a5b6c6;
 	background-image: url(images/top-left.png);
 	background-repeat: no-repeat;
 	background-position: top left;
@@ -210,35 +178,14 @@ textarea { font-size : 100% }
 }
 
 .top-right {
-	background-color: #a5b6c6;
 	background-image: url(images/top-right.png);
 	background-repeat: no-repeat;
 	background-position: top right;
 	width : 5px;
 	height : 5px;
 }
-
-.top-left-tab  {
-	background-color: #cedfef;
-	background-image: url(images/top-left.png);
-	background-repeat: no-repeat;
-	background-position: top left;
-	width : 5px;
-	height : 5px;
-}
-
-.top-right-tab {
-	background-color: #cedfef;
-	background-image: url(images/top-right.png);
-	background-repeat: no-repeat;
-	background-position: top right;
-	width : 5px;
-	height : 5px;
-}
-
 
 .bottom-left {
-	background-color: #a5b6c6;
 	background-image: url(images/bottom-left.png);
 	background-repeat: no-repeat;
 	background-position: bottom left;
@@ -247,7 +194,6 @@ textarea { font-size : 100% }
 }
 
 .bottom-right {
-	background-color: #a5b6c6;
 	background-image: url(images/bottom-right.png);
 	background-repeat: no-repeat;
 	background-position: bottom right;
@@ -256,7 +202,6 @@ textarea { font-size : 100% }
 }
 
 .bottom-left-thick {
-	background-color: #a5b6c6;
 	background-image: url(images/bottom-left.png);
 	background-repeat: no-repeat;
 	background-position: bottom left;
@@ -265,7 +210,6 @@ textarea { font-size : 100% }
 }
 
 .bottom-right-thick {
-	background-color: #a5b6c6;
 	background-image: url(images/bottom-right.png);
 	background-repeat: no-repeat;
 	background-position: bottom right;
@@ -273,8 +217,52 @@ textarea { font-size : 100% }
 	height : 9px;
 }
 
+/* ==================== main colors ============================ */
+
+ body           { background-color: #FFFFFF;  color:#000000;}   
+.header         { background-color: #FFFFFF;}   
+.border         { background-color: #a5b6c6;}   
+.subborder      { background-color: #CFDCED;}
+.dialog         { background-color: #F7F7F7;}    
+.footer         { background-color: #a5b6c6;}   
+.tab.selected   { background-color: #a5b6c6;}
+.tab.unselected { background-color: #F7F7F7;}
+.menu .menupagetitle     { background-color:#CFDCED; border-color: #a5b6c6;}
+.menu .menupageitemgroup { background-color:#FFFFFF; border-color: #a5b6c6;}
+.menu                    { border-color: #a5b6c6;}
+
+/* ==================== other colors ============================ */
+
+.highlight { background-color: yellow;  } 
+.datenote  { color: #F7F7F7;}
+a:link { color: #0F3660; }
+a:visited { color: #000044; }
+a:active { color: #800000; }
+a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
+.menu a { color: #000000; }
+.menu a:visited { color: #000000; }
+.menu a:active { color: #000000;  }
+.menu a:hover { color: #000000;  }
+table .title { background-color: #FFFFFF; }
+.content .ForrestTable {background-color: #7099C5; color: #ffffff; }
+.content .ForrestTable caption { color: black; }
+.content .ForrestTable td { background-color: #f0f0ff; color: black; }
+.fixme {background-image: url(images/icon_warning_lrg.gif);	border-color: #c60;}
+.note {	background-image: url(images/icon_info_lrg.gif); border-color: #069;}
+.code { background-color: #F7F7F7; border-color: #CFDCED;}
+.dtdTag {    color: #990000; }
+.bottom-left {	background-color: #a5b6c6;}
+.bottom-right {	background-color: #a5b6c6;}
+.bottom-left-thick {background-color: #a5b6c6;}
+.bottom-right-thick {background-color: #a5b6c6;}
+
+/* ==================== print ============================ */
 
 @media print {
+  h1, h2, h3, h4, h5, h6 { page-break-after: avoid; page-break-inside: avoid }
+  blockquote, pre { page-break-inside: avoid }
+  ul, ol, dl { page-break-before: avoid }
+
   .headerlogo { display: none;  }
   .textheader { display: block;  font-size : 70%; }
   .menu { display: none;  }
@@ -282,11 +270,8 @@ textarea { font-size : 100% }
   .minitoc { display: none;  }
   .search { display: none;  }
   .datenote { display: none;  }
-  /*.footnote { display: none;  }*/
   .tab  { display: none;  }
   .trail  { display: none;  }
-  .logos  { display: none;  }
-
   .top-left { display: none;  }
   .top-right { display: none;  }
   .top-left-tab  { display: none;  }
@@ -295,11 +280,30 @@ textarea { font-size : 100% }
   .bottom-right  { display: none;  }
   .bottom-left-thick { display: none;  }
   .bottom-right-thick  { display: none;  }
-    
 }
 
+/* ==================== aural ============================ */
 
-
-
-
-
+@media aural {
+  h1, h2, h3, h4, h5, h6 { voice-family: paul, male; stress: 20; richness: 90 }
+  h1 { pitch: x-low; pitch-range: 90 }
+  h2 { pitch: x-low; pitch-range: 80 }
+  h3 { pitch: low; pitch-range: 70 }
+  h4 { pitch: medium; pitch-range: 60 }
+  h5 { pitch: medium; pitch-range: 50 }
+  h6 { pitch: medium; pitch-range: 40 }
+  li, dt, dd { pitch: medium; richness: 60 }
+  dt { stress: 80 }
+  pre, code, tt { pitch: medium; pitch-range: 0; stress: 0; richness: 80 }
+  em { pitch: medium; pitch-range: 60; stress: 60; richness: 50 }
+  strong { pitch: medium; pitch-range: 60; stress: 90; richness: 90 }
+  dfn { pitch: high; pitch-range: 60; stress: 60 }
+  s, strike { richness: 0 }
+  i { pitch: medium; pitch-range: 60; stress: 60; richness: 50 }
+  b { pitch: medium; pitch-range: 60; stress: 90; richness: 90 }
+  u { richness: 0 }
+  
+  :link { voice-family: harry, male }
+  :visited { voice-family: betty, female }
+  :active { voice-family: betty, female; pitch-range: 80; pitch: x-high }
+}
