Remove double image urls in note-warning-error class modifiers .
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8922 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -235,23 +235,23 @@ table .title {  width:100%; border: 0px; }
 
 .highlight { background-color: yellow;  } 
 .datenote  { color: #F7F7F7;}
-a:link { color: #0F3660; }
+a:link    { color: #0F3660; }
 a:visited { color: #000044; }
-a:active { color: #800000; }
-a:hover { border: 0px solid #a5b6c6; background: #CFDCED; }
-.menu a { color: #000000; }
+a:active  { color: #800000; }
+a:hover   { border: 0px solid #a5b6c6; background: #CFDCED; }
+.menu a         { color: #000000; }
 .menu a:visited { color: #000000; }
-.menu a:active { color: #000000;  }
-.menu a:hover { color: #000000;  }
+.menu a:active  { color: #000000;  }
+.menu a:hover   { color: #000000;  }
 table .title { background-color: #FFFFFF; }
-.content .ForrestTable {background-color: #7099C5; color: #ffffff; }
+.content .ForrestTable         { color: #ffffff; background-color: #7099C5;}
 .content .ForrestTable caption { color: black; }
-.content .ForrestTable td { background-color: #f0f0ff; color: black; }
-.fixme {background-image: url(images/icon_warning_lrg.gif);	border-color: #c60;}
-.note {	background-image: url(images/icon_info_lrg.gif); border-color: #069;}
-.code { background-color: #F7F7F7; border-color: #CFDCED;}
-.dtdTag {    color: #990000; }
-.bottom-left {	background-color: #a5b6c6;}
+.content .ForrestTable td      { color: black;   background-color: #f0f0ff; }
+.fixme { border-color: #c60;}
+.note  { border-color: #069;}
+.code  { border-color: #CFDCED;}
+.dtdTag { color: #990000; }
+.bottom-left  { background-color: #a5b6c6;}
 .bottom-right {	background-color: #a5b6c6;}
 .bottom-left-thick {background-color: #a5b6c6;}
 .bottom-right-thick {background-color: #a5b6c6;}
