- changed icons to original icons (made by me and not gotten from elsewhere) - removed unused icons
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8923 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -143,9 +143,9 @@ table .title {  width:100%; border: 0px; }
 	min-height: 32px;
 }
 
-.fixme   { background-image: url(images/icon_warning_lrg.gif);}
-.note    { background-image: url(images/icon_info_lrg.gif);   }
-.warning { background-image: url(images/icon_error_lrg.gif);  }
+.fixme   { background-image: url(images/warning.png);}
+.note    { background-image: url(images/info.png);   }
+.warning { background-image: url(images/error.png);  }
 
 /* ==================== visual class modifiers ============================ */
 
