Fix the tab positioning. With small images in the header the tabs were hovering.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8933 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/skins/krysalis-site/css/page.css
+++ b/src/resources/skins/krysalis-site/css/page.css
@@ -113,6 +113,10 @@ table .title {  width:100%; border: 0px; }
        height:20px;	
 }
 
+.tabstrip { 
+       vertical-align: bottom;
+}
+
 /* ==================== tabs ============================ */
 
 .tab.separator { width:6px; }
