Minor fix for krysalis skin to make it use the unique border color definition also in rounded borders.
Add commented out Forrest colors for krysalis skin.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8980 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -221,7 +221,7 @@ table .title {  width:100%; border: 0px; }
 	height : 9px;
 }
 
-/* ==================== main colors ============================ */
+/* ==================== main block colors ============================ */
 
  body           { background-color: #FFFFFF;  color:#000000;}   
 .header         { background-color: #FFFFFF;}   
@@ -231,22 +231,47 @@ table .title {  width:100%; border: 0px; }
 .footer         { background-color: #a5b6c6;}   
 .tab.selected   { background-color: #a5b6c6;}
 .tab.unselected { background-color: #F7F7F7;}
-.menu .menupagetitle     { background-color:#CFDCED; border-color: #a5b6c6;}
-.menu .menupageitemgroup { background-color:#FFFFFF; border-color: #a5b6c6;}
-.menu                    { border-color: #a5b6c6;}
 
-/* ==================== other colors ============================ */
+/* ==================== main text colors ============================ */
 
-.highlight { background-color: yellow;  } 
-.datenote  { color: #F7F7F7;}
 a:link    { color: #0F3660; }
 a:visited { color: #000044; }
 a:active  { color: #800000; }
 a:hover   { border: 0px solid #a5b6c6; background: #CFDCED; }
+.menu .menupagetitle     { background-color:#CFDCED; border-color: #a5b6c6;}
+.menu .menupageitemgroup { background-color:#FFFFFF; border-color: #a5b6c6;}
+.menu                    { border-color: #a5b6c6;}
 .menu a         { color: #000000; }
 .menu a:visited { color: #000000; }
 .menu a:active  { color: #000000;  }
 .menu a:hover   { color: #000000;  }
+
+/* ==================== original Forrest colors ============================ */
+/*
+ body           { background-color: #FFFFFF;  color:#000000;}   
+.header         { background-color: #294563;}   
+.border         { background-color: #4a6d8c;}   
+.subborder      { background-color: #cedfef;}
+.dialog         { background-color: #4a6d8c;}    
+.footer         { background-color: #cedfef;}   
+.tab.selected   { background-color: #4a6d8c;}
+.tab.unselected { background-color: #b5c7e7;}
+a:link    { color: #0F3660; }
+a:visited { color: #000044; }
+a:active  { color: #800000; }
+a:hover   { border: 0px solid #a5b6c6; background: #CFDCED; }
+.menu .menupagetitle     { background-color:#CFDCED; border-color: #4a6d8c;}
+.menu .menupageitemgroup { background-color:#FFFFFF; border-color: #4a6d8c;}
+.menu                    { border-color: #4a6d8c;}
+.menu a         { color: #ffffff; }
+.menu a:visited { color: #ffffff; }
+.menu a:active  { color: #ffffff;  }
+.menu a:hover   { color: #000000;  }
+*/
+/* ==================== other colors ============================ */
+
+.highlight { background-color: yellow;  } 
+.datenote  { color: #F7F7F7;}
 table .title { background-color: #FFFFFF; }
 .content .ForrestTable         { color: #ffffff; background-color: #7099C5;}
 .content .ForrestTable caption { color: black; }
@@ -255,10 +280,7 @@ table .title { background-color: #FFFFFF; }
 .note  { border-color: #069;}
 .code  { border-color: #CFDCED;}
 .dtdTag { color: #990000; }
-.bottom-left  { background-color: #a5b6c6;}
-.bottom-right {	background-color: #a5b6c6;}
-.bottom-left-thick {background-color: #a5b6c6;}
-.bottom-right-thick {background-color: #a5b6c6;}
+
 
 /* ==================== print ============================ */
 
