Update Forrestbar links and remove source filtering.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9034 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/forrestbar/xpi/content/forrestbar/forrestbar.css
+++ b/src/forrestbar/xpi/content/forrestbar/forrestbar.css
@@ -63,10 +63,10 @@ image#forrestbar-logo {
 	list-style-image: url("images/tools.png");
 }
 
-#forrestbar-asksam:hover {
+#forrestbar-faqs:hover {
 	list-style-image: url("images/faq-down.png");
 }
-#forrestbar-asksam {
+#forrestbar-faqs {
 	list-style-image: url("images/faq.png");
 }
 
