--- a/src/resources/skins/forrest-site/css/page.css
+++ b/src/resources/skins/forrest-site/css/page.css
@@ -45,12 +45,13 @@ table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 
 .note { border: solid 1px #7099C5; background-color: #f0f0ff; }
 .note .label { background-color: #7099C5; color: #ffffff; }
+.note .label { background-color: #7099C5; color: #ffffff; padding: 5px 5px 5px 10px; }
 
 .warning { border: solid 1px #D00000; background-color: #fff0f0; }
-.warning .label { background-color: #D00000; color: #ffffff; }
+.warning .label { background-color: #D00000; color: #ffffff; padding: 5px 5px 5px 10px; }
 
 .fixme { border: solid 1px #C6C600; background-color: #FAF9C3; }
-.fixme .label { background-color: #C6C600; color: #ffffff; }
+.fixme .label { background-color: #C6C600; color: #ffffff; padding: 5px 5px 5px 10px; }
 
 .code { border-color: #CFDCED; border-style: solid; border-width: 1px; }
 .codefrag { font-family: "Courier New", Courier, monospace; }
