Double new features (as they have changes some of the same files) - add subtab handling and enable it for krysalis-site and tigris-style - show external links with an icon at the end
Note: not added for other skins as forrest-site will use krysalis-site soon
and tigris-style deprecates avalon-tigris. As for teh forrest-css one, never
looked at it, sorry


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9085 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -113,19 +113,50 @@ table .title {  width:100%; border: 0px; }
        height:20px;	
 }
 
+.level2tab { 
+       font-size : 85%;
+       border: 0 ;
+       margin: 0 0 0 0;
+       padding: 0 0 0 0;
+       border-spacing: 0 0;
+       vertical-align: middle;
+       height:25px;	
+}
+
 .tabstrip { 
        vertical-align: bottom;
+}
+
+.tabstripSeparator { 
+       vertical-align: bottom;
+       height:4px;	
+       background-color: #a5b6c6;
 }
 
 /* ==================== tabs ============================ */
 
 .tab.separator { width:6px; }
+.level2tab.separator { padding-left: 4px; padding-right: 4px;}
 .tab.pre-separator { width:9px;}
+
+.tab.selected   { font-weight: bold;}
+.tab.unselected { background-color: #F7F7F7;}
+
+.level2tab.selected         {}
+.level2tab.unselected       {}   
+.level2tab.separator        {}
+
+.level2tab { font-size : 80%; font-weight: normal; height: 10px;}
 
 .tab a:link {  font-weight: normal;}
 .tab a:visited { font-weight: normal; }
 .tab a:active { font-weight: normal; }
 .tab a:hover {  font-weight: normal; }
+
+.tab.selected  a:link {  font-weight: bold;}
+.tab.selected  a:visited { font-weight: bold; }
+.tab.selected  a:active { font-weight: bold; }
+.tab.selected  a:hover {  font-weight: bold; }
 
 /* ==================== snail trail ============================ */
 
@@ -231,6 +262,9 @@ table .title {  width:100%; border: 0px; }
 .footer         { background-color: #a5b6c6;}   
 .tab.selected   { background-color: #a5b6c6;}
 .tab.unselected { background-color: #F7F7F7;}
+.level2tab.selected         {}
+.level2tab.unselected       {}   
+.level2tab.separator        {}
 
 /* ==================== main text colors ============================ */
 
