Add subtab functionality
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9087 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/forrest-site/css/page.css
+++ b/src/core/context/skins/forrest-site/css/page.css
@@ -23,6 +23,11 @@ img { border: 0; }
 .tab a:link {   text-decoration : none;  }
 .tab a:visited { text-decoration : none; color: #2A4A6D }
 .tab a:hover { color: #000066; }
+.level2tab { font-size : 75%; border: 0 ; color: #2A4A6D}
+.level2tab a {  color: #2A4A6D }
+.level2tab a:link {   text-decoration : none;  }
+.level2tab a:visited { text-decoration : none; color: #2A4A6D }
+.level2tab a:hover { color: #000066; }
 
 table .title { background-color: #FFFFFF; width:100%; border: 0px; }
 .dida { font-size: 80%; }
